header - fix patient name cutoff issue as seen in Kent Prod  (#134)
* header - fix name cutoff issue

* Fix header height constant

--- a/src/styles/components/_Header.scss
+++ b/src/styles/components/_Header.scss
@@ -87,13 +87,12 @@
 
     &-patient {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       margin-left: 16px;
 
       .patient-icon {
         font-size: 1.6em;
         color: $color-blue;
-        margin-top: 4px;
         margin-right: 8px;
         position: relative;
       }
@@ -103,6 +102,7 @@
         line-height: 1em;
         font-size: 1.8em;
         margin: 0;
+        display: inline-block;
       }
 
       .patient-demographics {
@@ -124,7 +124,7 @@
       }
       .patient-info {
         padding-right: 8px;
-        min-width: 180px;
+        min-width: 240px;
       }
     }
 
