--- a/src/styles/elements/_variables.scss
+++ b/src/styles/elements/_variables.scss
@@ -34,7 +34,7 @@ $color-warning: #df960e;
 $color-success: green;
 $link-color: darken($color-blue, 10%);
 $summary-nav-bg-color: #64707e;
-$min-header-height: 92px;
+$min-header-height: 100px;
 $summary-nav-width: 248px;
 // ------------------------- PATHS ----------------------------------------- //
 $fa-font-path: '/assets/fontawesome';
